--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.fhict.memory</groupId>
-    <artifactId>memory</artifactId>
+    <groupId>com.fhict.multithreading</groupId>
+    <artifactId>multithreading</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>memory-and-data</module>
+        <module>koch-fractals</module>
+    </modules>
 </project>
