--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,6 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>memory-and-data</module>
-        <module>koch-fractals</module>
+        <module>kochfractal</module>
     </modules>
 </project>
